--- a/.github/workflows/aliyun-sync-images.yml
+++ b/.github/workflows/aliyun-sync-images.yml
@@ -34,4 +34,4 @@ jobs:
         
     - name: sync images
       run: |
-        ./image-syncer --proc=20 --config=config_aliyun.yaml --retries=1
+        ./image-syncer --proc=20 --namespace=antidebug --config=config_aliyun.yaml --retries=1
